# neko.rs

./: .gitignore  Cargo.toml  README.md
config/: config.xml
src/: main.rs
src/client/: get_aur_packages.rs  mod.rs  requests.rs
src/commands/: download.rs  mod.rs  update.rs
src/console/: cli.rs  mod.rs  neko_console.rs
src/models/: mod.rs  neko_config.rs  package.rs  package_results.rs
src/utilities/: dir_utils.rs  get_xdg_config.rs  mod.rs
