[package]
name = "neko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
colored = "2"
serde_json = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"
nix = "0.27.1"
clap = "4.4.3"
